# quiz-walk

./: .gitignore  LICENSE  README.md  pyproject.toml  quiz_walk.db
api/: database.py  models.py
api/routers/: question_router.py  response_router.py  team_router.py
app/: main.py
frontend/: index.html  script.js  styles.css
quiz-walk-frontend/: package-lock.json  package.json
quiz-walk-frontend/src/: App.js  index.css
quiz-walk-frontend/src/components/: Questions.js  SubmitResponse.js
